--- a/Agenda/reportes/ReporteAgenda.jrxml
+++ b/Agenda/reportes/ReporteAgenda.jrxml
@@ -2,64 +2,81 @@
 <!-- Created with Jaspersoft Studio version 6.5.1.final using JasperReports Library version 6.5.1  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Blank_A4" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" whenResourceMissingType="Empty" uuid="284e0c88-a4b2-4ff8-98a2-d67b80bcffaf">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
+	<property name="com.jaspersoft.studio.unit." value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.pageHeight" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.pageWidth" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.topMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.bottomMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.leftMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.rightMargin" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
+	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
 	<parameter name="Fecha" class="java.lang.String"/>
 	<queryString language="SQL">
 		<![CDATA[]]>
 	</queryString>
-	<field name="piso" class="java.lang.Integer">
-		<fieldDescription><![CDATA[piso]]></fieldDescription>
-	</field>
-	<field name="tipo" class="java.lang.Integer">
-		<fieldDescription><![CDATA[tipo]]></fieldDescription>
-	</field>
 	<field name="mail" class="java.lang.String">
 		<fieldDescription><![CDATA[mail]]></fieldDescription>
-	</field>
-	<field name="calle" class="java.lang.String">
-		<fieldDescription><![CDATA[calle]]></fieldDescription>
 	</field>
 	<field name="signoHoroscopoChino" class="java.lang.String">
 		<fieldDescription><![CDATA[signoHoroscopoChino]]></fieldDescription>
 	</field>
-	<field name="dpto" class="java.lang.String">
-		<fieldDescription><![CDATA[dpto]]></fieldDescription>
-	</field>
 	<field name="nombre" class="java.lang.String">
 		<fieldDescription><![CDATA[nombre]]></fieldDescription>
 	</field>
-	<field name="altura" class="java.lang.Integer">
-		<fieldDescription><![CDATA[altura]]></fieldDescription>
-	</field>
-	<field name="localidad" class="java.lang.Integer">
-		<fieldDescription><![CDATA[localidad]]></fieldDescription>
+	<field name="nacimiento" class="java.util.Date">
+		<fieldDescription><![CDATA[nacimiento]]></fieldDescription>
 	</field>
 	<field name="telefono" class="java.lang.String">
 		<fieldDescription><![CDATA[telefono]]></fieldDescription>
 	</field>
-	<field name="cumpleaños" class="java.util.Date">
-		<fieldDescription><![CDATA[cumpleaños]]></fieldDescription>
-	</field>
+	<variable name="ROW_COUNTER" class="java.lang.String" resetType="Group" resetGroup="Signos" calculation="Count">
+		<variableExpression><![CDATA[$F{signoHoroscopoChino}]]></variableExpression>
+	</variable>
+	<group name="Main">
+		<groupExpression><![CDATA[$F{signoHoroscopoChino}]]></groupExpression>
+	</group>
 	<group name="Signos">
 		<groupExpression><![CDATA[$F{signoHoroscopoChino}]]></groupExpression>
 		<groupHeader>
-			<band height="50">
+			<band height="105">
 				<rectangle>
-					<reportElement mode="Opaque" x="-10" y="10" width="580" height="30" forecolor="#030202" backcolor="#4C2DE3" uuid="5a4a49e5-4494-4bc0-9675-5ef18b2fcd33"/>
+					<reportElement x="0" y="2" width="551" height="41" uuid="e9870e41-cc53-446e-b481-7f7f30f3514a"/>
 				</rectangle>
 				<textField>
-					<reportElement x="20" y="15" width="143" height="20" uuid="092f1c6f-21fd-4cf1-a5cb-5070f8c68761"/>
+					<reportElement x="30" y="13" width="200" height="19" uuid="4f01095f-92ac-4ffe-aa73-1f970ed23618"/>
 					<textFieldExpression><![CDATA[$F{signoHoroscopoChino}]]></textFieldExpression>
 				</textField>
+				<staticText>
+					<reportElement x="3" y="69" width="109" height="30" uuid="7ed33bd6-e0b9-400c-9f6f-80c1291fe836"/>
+					<text><![CDATA[Nombre y apellido]]></text>
+				</staticText>
+				<staticText>
+					<reportElement x="121" y="69" width="90" height="30" uuid="2fe914c2-a4d0-4cc8-8f4f-38feb90beb8e"/>
+					<text><![CDATA[Telefono]]></text>
+				</staticText>
+				<staticText>
+					<reportElement x="220" y="69" width="134" height="30" uuid="4d8c6281-1171-4257-928b-58d3da5d0f21"/>
+					<text><![CDATA[Mail]]></text>
+				</staticText>
+				<staticText>
+					<reportElement x="354" y="70" width="67" height="30" uuid="1359324b-8b77-4e9a-a45c-d6397abf6a78"/>
+					<text><![CDATA[Fecha de nacimiento]]></text>
+				</staticText>
+				<staticText>
+					<reportElement x="439" y="70" width="115" height="30" uuid="97c506d0-71b2-4a99-a4fd-1d4bafc4355c"/>
+					<text><![CDATA[Signo]]></text>
+				</staticText>
 			</band>
 		</groupHeader>
 		<groupFooter>
-			<band height="58">
+			<band height="60">
 				<staticText>
-					<reportElement x="455" y="14" width="34" height="16" uuid="94b1d0f6-22b8-4442-b21c-4c5a8713a5bb"/>
-					<text><![CDATA[Total: ]]></text>
+					<reportElement x="421" y="10" width="34" height="20" uuid="f16f32ef-3144-4901-8a2f-ac47409c77c8"/>
+					<text><![CDATA[Total:]]></text>
 				</staticText>
 				<textField>
-					<reportElement x="489" y="14" width="61" height="16" uuid="4f64a83e-2722-46f3-a01e-4f2fe2aea0cc"/>
+					<reportElement x="470" y="10" width="50" height="17" uuid="42e16c72-772f-4101-8c08-eac4c649f1d2"/>
 					<textFieldExpression><![CDATA[$V{Signos_COUNT}]]></textFieldExpression>
 				</textField>
 			</band>
@@ -102,109 +119,34 @@
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="31" splitType="Stretch">
-			<frame>
-				<reportElement x="-18" y="10" width="588" height="19" uuid="23209a62-cc9d-4b81-8e93-aa9cc3a92b36"/>
-				<staticText>
-					<reportElement x="0" y="-1" width="111" height="21" uuid="6f5462fa-eb72-479f-bb27-fb5ef7144791"/>
-					<textElement textAlignment="Center">
-						<font size="11"/>
-					</textElement>
-					<text><![CDATA[Nombre y apellido]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="111" y="-1" width="60" height="20" uuid="e2252ea3-811b-43d8-ae6b-e9b261b705f9"/>
-					<textElement textAlignment="Left">
-						<font size="11"/>
-					</textElement>
-					<text><![CDATA[Teléfono]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="528" y="0" width="60" height="20" uuid="48ed8594-5871-4260-a4b4-d41dee176d8f"/>
-					<textElement textAlignment="Left">
-						<font size="11"/>
-					</textElement>
-					<text><![CDATA[Tipo]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="290" y="0" width="92" height="19" uuid="b80f9080-cbf7-4911-b08d-7e8131b6c451"/>
-					<textElement textAlignment="Left">
-						<font size="11"/>
-					</textElement>
-					<text><![CDATA[Localidad]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="380" y="1" width="60" height="19" uuid="817743fd-cf5f-4011-9833-9ba3903b906c"/>
-					<textElement textAlignment="Left">
-						<font size="11"/>
-					</textElement>
-					<text><![CDATA[Mail]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="450" y="0" width="78" height="20" uuid="807e6e66-5b51-4438-836e-1b45a5855239"/>
-					<textElement textAlignment="Left">
-						<font size="11"/>
-					</textElement>
-					<text><![CDATA[Cumpleaños]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="181" y="0" width="59" height="20" uuid="4cbe08c7-22e8-46c5-9833-ab8525ff92d8"/>
-					<textElement textAlignment="Left">
-						<font size="11"/>
-					</textElement>
-					<text><![CDATA[Calle]]></text>
-				</staticText>
-				<staticText>
-					<reportElement x="240" y="-1" width="40" height="20" uuid="f13e89cd-fd77-4eab-b622-d37ae558ceb0"/>
-					<textElement textAlignment="Left">
-						<font size="11"/>
-					</textElement>
-					<text><![CDATA[Altura]]></text>
-				</staticText>
-			</frame>
-		</band>
+		<band height="17" splitType="Stretch"/>
 	</columnHeader>
 	<detail>
 		<band height="50" splitType="Stretch">
 			<textField>
-				<reportElement x="0" y="0" width="80" height="18" uuid="4a345b01-b751-4529-b6d6-2ccf3c13ff66"/>
+				<reportElement x="0" y="10" width="112" height="30" uuid="4a345b01-b751-4529-b6d6-2ccf3c13ff66"/>
 				<textFieldExpression><![CDATA[$F{nombre}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="93" y="1" width="60" height="18" uuid="dd3f7d4c-c2c3-4ee6-8d98-1b88fe0228ec"/>
+				<reportElement x="121" y="11" width="90" height="29" uuid="dd3f7d4c-c2c3-4ee6-8d98-1b88fe0228ec"/>
 				<textFieldExpression><![CDATA[$F{telefono}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="170" y="0" width="52" height="13" uuid="0fc51d4d-8dbb-48bc-bf3e-ba7002e056b1"/>
-				<textFieldExpression><![CDATA[$F{calle}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="221" y="-1" width="42" height="15" uuid="93dfc4c0-1d0f-4b63-8488-89f9abce6265"/>
-				<textFieldExpression><![CDATA[$F{altura}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="285" y="0" width="67" height="18" uuid="cf3c23ff-a601-444e-882d-f9fe3a7689ef"/>
-				<textFieldExpression><![CDATA[$F{localidad}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="364" y="-2" width="79" height="16" uuid="50ef06c2-ec88-4b28-a808-325a76bfe1ab"/>
+				<reportElement x="221" y="11" width="133" height="29" uuid="50ef06c2-ec88-4b28-a808-325a76bfe1ab"/>
 				<textFieldExpression><![CDATA[$F{mail}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="443" y="0" width="67" height="18" uuid="44dfc3ae-183d-4fae-a386-a38d9816c8be"/>
-				<textFieldExpression><![CDATA[DATEFORMAT($F{cumpleaños},"dd/MM/yyyy")]]></textFieldExpression>
+				<reportElement x="354" y="10" width="67" height="30" uuid="44dfc3ae-183d-4fae-a386-a38d9816c8be"/>
+				<textFieldExpression><![CDATA[DATEFORMAT($F{nacimiento},"dd/MM/yyyy")]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="510" y="0" width="60" height="19" uuid="1b99210d-d4c7-49fb-b499-8b2c75f94010"/>
-				<textFieldExpression><![CDATA[$F{tipo}]]></textFieldExpression>
+				<reportElement x="439" y="10" width="115" height="30" uuid="c5022ebe-6a4c-4b53-a9c1-4c62e4013faf"/>
+				<textFieldExpression><![CDATA[$F{signoHoroscopoChino}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
-	<columnFooter>
-		<band height="7" splitType="Stretch"/>
-	</columnFooter>
 	<pageFooter>
-		<band height="38" splitType="Stretch">
+		<band height="49" splitType="Stretch">
 			<textField>
 				<reportElement x="355" y="0" width="100" height="30" uuid="5ce007da-8e81-48b7-91fd-8e603c20d7ef"/>
 				<textElement textAlignment="Right"/>
@@ -218,10 +160,10 @@
 		</band>
 	</pageFooter>
 	<summary>
-		<band height="393">
+		<band height="282">
 			<pieChart>
 				<chart evaluationTime="Report">
-					<reportElement x="180" y="30" width="200" height="200" uuid="40474c78-e8c3-42cc-be27-d9021a37b3f2"/>
+					<reportElement x="80" y="20" width="400" height="250" uuid="ab2199dd-d5d1-4fc8-aa2c-6ab13c74ea87"/>
 					<chartTitle/>
 					<chartSubtitle/>
 					<chartLegend/>
@@ -229,9 +171,8 @@
 				<pieDataset>
 					<keyExpression><![CDATA[$F{signoHoroscopoChino}]]></keyExpression>
 					<valueExpression><![CDATA[$V{Signos_COUNT}]]></valueExpression>
-					<labelExpression><![CDATA[$F{signoHoroscopoChino} + " - " + $V{Signos_COUNT}]]></labelExpression>
 				</pieDataset>
-				<piePlot>
+				<piePlot labelFormat="{0} {2}">
 					<plot/>
 					<itemLabel/>
 				</piePlot>
